13-kubenet-03-k8snet/assets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    app: netology-task
