13-kubenet-03-k8snet/assets/dep-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-frontend
  namespace: my-test-app
  labels:
    app: app-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-front
  template:
    metadata:
      labels:
        app: netology-front
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: my-test-app
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: frontend
  type: ClusterIP
