13-kubenet-03-k8snet/assets/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment-frontend
  namespace: app
  labels:
    app: app-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-front
  template:
    metadata:
      labels:
        app: app-front
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: app
spec:
  selector:
    app: app-front
  ports:
    - name: multitool-front-http
      port: 80
      targetPort: 80
