13-kubenet-03-k8snet/assets/np-allowall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: app
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
