13-kubenet-03-k8snet/assets/np-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-backend
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: app-back
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: app-front
      ports:
        - port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: app-cache
      ports:
        - port: 80
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
