13-kubenet-03-k8snet/assets/np-cache.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-cache
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: app-cache
  policyTypes:
    - Ingress
    - Egress
  ingress:  
    - from:
      - podSelector:
          matchLabels:
            app: app-back
      ports:
        - port: 80
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
