13-kubenet-03-k8snet/assets/np-denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-deny-all
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
